--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "build": "father build && chmod +x dist/cjs/index.js",
     "build:deps": "father prebundle",
     "prepublishOnly": "father doctor && npm run build",
-    "inspector": "npx @modelcontextprotocol/inspector dist/cjs/index.js"
+    "inspector": "npx @modelcontextprotocol/inspector dist/cjs/index.js",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
+    "prepare": "husky"
   },
   "keywords": [
     "mcp",
@@ -41,6 +46,23 @@
   },
   "devDependencies": {
     "@types/node": "25.0.3",
-    "father": "^4.6.13"
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "father": "^4.6.13",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{js,jsx,json,md}": [
+      "prettier --write"
+    ]
   }
 }
