--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "scripts": {
     "dev": "father dev",
+    "dev:inspector": "npm run dev & sleep 2 && npm run inspector",
     "build": "father build && chmod +x dist/cjs/index.js",
     "build:deps": "father prebundle",
     "prepublishOnly": "father doctor && npm run build",
-    "inspector": "npx @modelcontextprotocol/inspector dist/cjs/index.js",
+    "inspector": "lsof -ti:6275 | xargs kill -9 2>/dev/null || true && lsof -ti:6278 | xargs kill -9 2>/dev/null || true && chmod +x dist/cjs/index.js && CLIENT_PORT=6275 SERVER_PORT=6278 mcp-inspector dist/cjs/index.js",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
@@ -45,6 +46,7 @@
     "zod": "^4.3.2"
   },
   "devDependencies": {
+    "@modelcontextprotocol/inspector": "^0.18.0",
     "@types/node": "25.0.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
