--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
-    "prepare": "husky"
+    "prepare": "husky",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "release": "pnpm build && changeset publish"
   },
   "keywords": [
     "mcp",
@@ -33,6 +36,14 @@
     "Orchard <orchardyz@outlook.com>"
   ],
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Orchardxyz/mammoth-mcp.git"
+  },
+  "homepage": "https://github.com/Orchardxyz/mammoth-mcp#readme",
+  "bugs": {
+    "url": "https://github.com/Orchardxyz/mammoth-mcp/issues"
+  },
   "files": [
     "dist",
     "compiled"
@@ -46,6 +57,7 @@
     "zod": "^4.3.2"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@modelcontextprotocol/inspector": "^0.18.0",
     "@types/node": "25.0.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
