--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prepare": "husky",
     "changeset": "changeset",
     "version": "changeset version",
-    "release": "pnpm build && changeset publish"
+    "release": "pnpm build && npm publish --provenance --access public"
   },
   "keywords": [
     "mcp",
