--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "v*.*.*"
+  workflow_dispatch:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -38,7 +41,29 @@ jobs:
       - name: Build Package
         run: pnpm run build
 
+      - name: Get Package Version
+        if: startsWith(github.ref, 'refs/tags/')
+        id: package_version
+        run: echo "version=$(node -e "console.log(require('./package.json').version)")" >> $GITHUB_OUTPUT
+
+      - name: Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          name: v${{ steps.package_version.outputs.version }}
+          body_path: CHANGELOG.md
+          draft: false
+          prerelease: false
+
+      - name: Publish to NPM (Tag)
+        if: startsWith(github.ref, 'refs/tags/')
+        run: npm publish --provenance --access public
+
       - name: Create Release Pull Request or Publish
+        if: github.ref == 'refs/heads/main'
         id: changesets
         uses: changesets/action@v1
         with:
