--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,6 @@ name: Release
 
 on:
   push:
-    branches:
-      - main
     tags:
       - "v*.*.*"
   workflow_dispatch:
@@ -16,7 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      pull-requests: write
       id-token: write
     steps:
       - name: Checkout
@@ -42,12 +39,10 @@ jobs:
         run: pnpm run build
 
       - name: Get Package Version
-        if: startsWith(github.ref, 'refs/tags/')
         id: package_version
         run: echo "version=$(node -e "console.log(require('./package.json').version)")" >> $GITHUB_OUTPUT
 
       - name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -58,18 +53,5 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Publish to NPM (Tag)
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Publish to NPM
         run: npm publish --provenance --access public
-
-      - name: Create Release Pull Request or Publish
-        if: github.ref == 'refs/heads/main'
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: pnpm release
-          version: pnpm version
-          commit: "chore: version packages"
-          title: "chore: version packages"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
