fix: remove manual provenance flag, let OIDC handle it

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,4 +54,4 @@ jobs:
           prerelease: false
 
       - name: Publish to NPM
-        run: npm publish --provenance --access public
+        run: npm publish --access public
