fix: add NPM_CONFIG_PROVENANCE=false env var

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,4 +54,6 @@ jobs:
           prerelease: false
 
       - name: Publish to NPM
-        run: npm publish --access public
+        run: npm publish
+        env:
+          NPM_CONFIG_PROVENANCE: false
