--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "prepare": "husky",
     "changeset": "changeset",
-    "version": "changeset version",
-    "release": "pnpm build && npm publish --provenance --access public"
+    "changeset:add": "changeset add",
+    "version": "changeset version && git add . && git commit -m 'chore: version packages'",
+    "release": "pnpm run release:version && pnpm run release:tag",
+    "release:version": "pnpm changeset version && git add . && git commit -m 'chore: version packages' && git push origin main",
+    "release:tag": "git tag v$(node -p \"require('./package.json').version\") && git push origin v$(node -p \"require('./package.json').version\")"
   },
   "keywords": [
     "mcp",
