--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "1.0.3",
   "packageManager": "pnpm@10.12.1",
   "description": "MCP for mammoth - Convert DOCX files to HTML",
-  "main": "dist/cjs/index.js",
-  "types": "dist/cjs/index.d.ts",
+  "type": "module",
+  "main": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "bin": {
-    "mammoth-mcp": "dist/cjs/index.js"
+    "mammoth-mcp": "dist/esm/index.js"
   },
   "scripts": {
     "dev": "father dev",
     "dev:inspector": "npm run dev & sleep 2 && npm run inspector",
-    "build": "father build && chmod +x dist/cjs/index.js",
+    "build": "father build && chmod +x dist/esm/index.js",
     "build:deps": "father prebundle",
     "prepublishOnly": "father doctor && npm run build",
-    "inspector": "lsof -ti:6275 | xargs kill -9 2>/dev/null || true && lsof -ti:6278 | xargs kill -9 2>/dev/null || true && chmod +x dist/cjs/index.js && CLIENT_PORT=6275 SERVER_PORT=6278 mcp-inspector dist/cjs/index.js",
+    "inspector": "lsof -ti:6275 | xargs kill -9 2>/dev/null || true && lsof -ti:6278 | xargs kill -9 2>/dev/null || true && chmod +x dist/esm/index.js && CLIENT_PORT=6275 SERVER_PORT=6278 mcp-inspector dist/esm/index.js",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
@@ -56,12 +57,14 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.25.1",
+    "lodash-es": "^4.17.22",
     "mammoth": "1.11.0",
     "zod": "^4.3.2"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@modelcontextprotocol/inspector": "^0.18.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "25.0.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
